<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_news_feed"
        android:icon="@drawable/ic_rss_feed_24"
        android:title="@string/menu_news_feed" />

    <item
        android:id="@+id/menu_connection"
        android:icon="@drawable/ic_network_check_24"
        android:title="@string/menu_connection" />

    <item
        android:id="@+id/menu_post"
        android:icon="@drawable/ic_post_add_24"
        android:title="@string/menu_post" />

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notifications_24"
        android:title="@string/menu_notification" />

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/menu_profile" />

</menu>